--- a/index.html
+++ b/index.html
@@ -9,56 +9,54 @@
   </head>
   <body>
     <div class="homepage-footer-container">
-      <div class="travel-footer-logo-description">
-        <h1 class="travel-logo-text">Travel</h1>
-        <img class="footer-logo" src="images/logo.png" />
-        <p class="logo-mini-text">
-          Travel helps companies<br />
-          manage payments easily.
-        </p>
-        <div class="social-media-icons-footer">
-          <img class="footer-icons-img" src="images/025-messenger.png" />
-          <img class="footer-icons-img" src="images/052-linkedin.png" />
-          <img class="footer-icons-img" src="images/096-twitter.png" />
-          <img class="footer-icons-img" src="images/097-twoo.png" />
-        </div>
-        <div class="company-and-destinitions-links">
-          <ul class="company-items">
-            <h2 class="company-text">Company</h2>
-            <li><a class="links-items-footer" href="#">About As</a></li>
-            <br />
-            <li><a class="links-items-footer"  href="#">Career</a></li>
-            <br />
-            <li><a class="links-items-footer"  href="#">Blog</a></li>
-            <br />
-            <li><a class="links-items-footer"  href="#">Piricing</a></li>
-            <br />
-          </ul>
-          <ul>
-            <h2 class="company-text">Destinations</h2>
-            <li><a class="links-items-footer"  href="#">Maldives</a></li>
-            <br />
-            <li><a class="links-items-footer"  href="#">Los Angelas</a></li>
-            <br />
-            <li><a class="links-items-footer"  href="#">Las Vegas</a></li>
-            <br />
-            <li><a class="links-items-footer"  href="#">Torronto</a></li>
-            <br />
-          </ul>
-        </div>
-        <div class="join-our-newsietter-footer">
-          <h1 class="join-our-text">Join Our Newsletter</h1>
-          <input class="your-email-adress" style="text" placeholder="Your email adress"/>
-          <button class="subsicribe-btn">Subsicribe</button>
-          <p class="join-our-paragraph">
-            * Will send you weekly updates for your better<br />
-            tour packages.
+      <footer class="travel-footer-logo-description">
+        <div class="travel-logo-desciption-screen">
+          <img class="footer-logo" src="images/logo.png" />
+          <p class="logo-mini-text">
+            Travel helps companies<br />
+            manage payments easily.
           </p>
+          <div class="social-media-icons-footer">
+            <img class="footer-icons-img" src="images/025-messenger.png" />
+            <img class="footer-icons-img" src="images/052-linkedin.png" />
+            <img class="footer-icons-img" src="images/096-twitter.png" />
+            <img class="footer-icons-img" src="images/097-twoo.png" />
         </div>
       </div>
-    </div>
-    <div class="footer-copyright-text">
-      <h6>Copyright @ Xpro 2022. All Rights Reserved.</h6>
+          <div class="company-and-destinitions-links">
+            <ul class="items-comp">
+              <h2 class="company-text">Company</h2>
+              <li><a class="links-items-footer" href="#">About As</a></li>
+              <li><a class="links-items-footer" href="#">Career</a></li>
+              <li><a class="links-items-footer" href="#">Blog</a></li>
+              <li><a class="links-items-footer" href="#">Piricing</a></li>
+            </ul>
+            <ul class="items-dest">
+              <h2 class="company-text">Destinations</h2>
+              <li><a class="links-items-footer" href="#">Maldives</a></li>
+              <li><a class="links-items-footer" href="#">Los Angelas</a></li>
+              <li><a class="links-items-footer" href="#">Las Vegas</a></li>
+              <li><a class="links-items-footer" href="#">Torronto</a></li>
+            </ul>
+            <div class="join-our-newsietter-footer">
+              <h1 class="join-our-text">Join Our Newsletter</h1>
+              <input class="your-email-adress" placeholder="Your email adress" />
+              <button class="subsicribe-btn">Subsicribe</button>
+              <p class="join-our-paragraph">
+                * Will send you weekly updates for your better<br />
+                tour packages.
+              </p>
+            </div>
+          </div>
+        </div>
+        
+      </footer>
+      <hr class="copyright-line" />
+      <div class="footer-copyright-text">
+        <h6 class="copyright-text">
+          Copyright @ Xpro 2022. All Rights Reserved.
+        </h6>
+      </div>
     </div>
   </body>
 </html>
