[PR-11]son-düzenleme-bitti-merge-hazır

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
       </div>
     </div>
     <div class="homepage-footer-container">
+      <img class="footer-background-img" src="images/Footer-img.png">
       <footer class="travel-footer-logo-description">
-         <div class="company-and-destinitions-links">
+      <div class="company-and-destinitions-links">
           <div class="travel-logo-desciption-screen">
             <img class="footer-logo" src="images/logo.png">
             <p class="logo-mini-text">
@@ -79,10 +80,7 @@
               </ul>
               <div class="join-our-newsietter-footer">
                 <h1 class="join-our-text">Join Our Newsletter</h1>
-                <input
-                  class="your-email-adress"
-                  placeholder="Your email adress"
-                />
+                <input class="your-email-adress"  placeholder="Your email adress"/>
                 <button class="subsicribe-btn">Subsicribe</button>
                 <p class="join-our-paragraph">
                   * Will send you weekly updates for your better<br />
@@ -91,17 +89,14 @@
               </div>
             </div>
             <hr class="copyright-line" />
-            <div class="footer-copyright-text">
-              <h6 class="copyright-text">
-                Copyright @ Xpro 2022. All Rights Reserved.
-              </h6>
-            </div>
+          </div>
+          <div class="footer-copyright-text">
+            <h6 class="copyright-text">
+              Copyright @ Xpro 2022. All Rights Reserved.
+            </h6>
           </div>
         </div>
       </footer>
-      <div class="footer-background-img">
-        <img src="images/Footer-img.png">
-      </div>
     </div>
   </body>
 </html>
