--- a/index.html
+++ b/index.html
@@ -6,8 +6,61 @@
     <title>Tour and Travel</title>
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/shared.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
+    <div class="homepage-hero-section-container">
+      <div class="navigation-links-items-container">
+      <div class="navigation-items">
+        <img src="images/logo.png">
+        <ul class="homepage-link-items">
+          <li><a class="homepage-item" href="#">Home</a></li>
+          <li><a class="homepage-item" href="#">About</a></li>
+          <li class="services-link-list">
+            <a class="homepage-item" href="#">Services <i id="services-down" class="fa-solid fa-chevron-down"></i></a>
+            <div class="services-links-items">
+              <ul>
+                <li><a class="services-item" href="#">Honeymoon Packages</a></li>
+                <li><a class="services-item" href="#">Tours Packages</a></li>
+                <li><a class="services-item" href="#">Musical Events</a></li>
+                <li><a class="services-item" href="#">Build Package</a></li>
+              </ul>
+            </div>
+          </li>
+          <li><a class="homepage-item" href="#">Upcomming Packages</a></li>
+        </ul>
+        <button class="homepage-touch-btn">Get in Touch</button>
+      </div>
+      </div>
+      <div class="homepage-description-screen">
+        <img src="images/Vector-1.png">
+        <h1 class="general-text">No matter where<br> you’re going to, we’ll <br> take you there</h1>
+        <div class="blur-screen-links-item">
+            <ul class="blur-links-item">
+              <li><a href="#">Where to?</a></li>
+              <img src="images/line.png">
+              <li><a href="#">Travel Type <i id="services-down" class="fa-solid fa-chevron-down"></i></a></li>
+              <img src="images/line.png">
+              <li><a href="#">Duration <i id="services-down" class="fa-solid fa-chevron-down"></i></a></li>
+            </ul>
+            <button class="blur-btn">Submit</button>
+        </div>
+        <div class="user-avatar-screen">
+          <img class="user-photos-one" src="images/user-avatar1.png">
+          <img class="user-photos-two" src="images/user-avatar2.png">
+          <img class="user-photos-three" src="images/user-avatar3.png">
+          <img class="user-photos-four" src="images/user-avatar4.png">
+          <img class="user-photos-five" src="images/user-avatar5.png">
+          <img class="user-photos-six" src="images/user-avatar6.png">
+          <img class="user-photos-seven" src="images/user-avatar-emty.png">
+          <h5 class="user-photos-plus">+</h5>
+          <p class="user-description">2,500 people booked Tommorowland Event in last 24 hours</p>
+        </div>
+      </div>
+      <div class="scrool">
+        <img src="images/scroll.png">
+      </div>
+    </div>
     <div class="honeymoon-project-container">
       <div class="honeymoon-wrapper">
         <div class="honeymoon-image">
@@ -46,6 +99,9 @@
           <button class="wiew-packages-btn"><h6>View Packages</h6></button>
         </div>
       </div>
+    </div>
+    <div class="page-lines">
+      <img src="images/page-line.png">
     </div>
   </body>
 </html>
