kodlamalardaki-hatalar-fazlalıklar-giderildi-merge-hazır

--- a/index.html
+++ b/index.html
@@ -34,67 +34,67 @@
         <div class="honeymoon-description-text">
           <h5 class="honeymoon-spacials-text">HONEYMOON SPECİALS</h5>
           <h1 class="romantic-tropical-honey">
-            Our Romantic Tropical <br>
+            Our Romantic Tropical <br />
             Destinations
           </h1>
           <p class="honeymoon-desc-etlabore">
             Et labore harum non nobis ipsum eum molestias mollitia et
-            corporis<br> praesentium a laudantium internos. Non quis eius quo eligendi
-            corrupti <br> et fugiat nulla Zqui soluta recusandae in maxime quasi aut
-            ducimus illum <br>aut optio quibusdam!
+            corporis<br />
+            praesentium a laudantium internos. Non quis eius quo eligendi
+            corrupti <br />
+            et fugiat nulla Zqui soluta recusandae in maxime quasi aut ducimus
+            illum <br />aut optio quibusdam!
           </p>
           <button class="wiew-packages-btn"><h6>View Packages</h6></button>
         </div>
       </div>
     </div>
     <div class="homepage-footer-container">
-      <img class="footer-background-img" src="images/Footer-img.png">
       <footer class="travel-footer-logo-description">
-      <div class="company-and-destinitions-links">
+        <img class="footer-background-img" src="images/Footer-img.png" />
+        <div class="company-and-destinitions-links">
           <div class="travel-logo-desciption-screen">
-            <img class="footer-logo" src="images/logo.png">
+            <img class="footer-logo" src="images/logo.png" />
             <p class="logo-mini-text">
-              Travel helps companies<br>
+              Travel helps companies<br />
               manage payments easily.
             </p>
             <div class="icons-settings-footer">
-            <img class="footer-icons-img" src="images/025-messenger.png" />
+              <img class="footer-icons-img" src="images/025-messenger.png" />
               <img class="footer-icons-img" src="images/052-linkedin.png" />
               <img class="footer-icons-img" src="images/096-twitter.png" />
               <img class="footer-icons-img" src="images/097-twoo.png" />
             </div>
           </div>
-              <ul class="items-comp">
-                <h2 class="company-text">Company</h2>
-                <li><a class="links-items-footer" href="#">About As</a></li>
-                <li><a class="links-items-footer" href="#">Career</a></li>
-                <li><a class="links-items-footer" href="#">Blog</a></li>
-                <li><a class="links-items-footer" href="#">Piricing</a></li>
-              </ul>
-              <ul class="items-dest">
-                <h2 class="company-text">Destinations</h2>
-                <li><a class="links-items-footer" href="#">Maldives</a></li>
-                <li><a class="links-items-footer" href="#">Los Angelas</a></li>
-                <li><a class="links-items-footer" href="#">Las Vegas</a></li>
-                <li><a class="links-items-footer" href="#">Torronto</a></li>
-              </ul>
-              <div class="join-our-newsietter-footer">
-                <h1 class="join-our-text">Join Our Newsletter</h1>
-                <input class="your-email-adress"  placeholder="Your email adress"/>
-                <button class="subsicribe-btn">Subsicribe</button>
-                <p class="join-our-paragraph">
-                  * Will send you weekly updates for your better<br />
-                  tour packages.
-                </p>
-              </div>
-            </div>
-            <hr class="copyright-line" />
+          <ul class="items-comp">
+            <h2 class="company-text">Company</h2>
+            <li><a class="links-items-footer" href="#">About As</a></li>
+            <li><a class="links-items-footer" href="#">Career</a></li>
+            <li><a class="links-items-footer" href="#">Blog</a></li>
+            <li><a class="links-items-footer" href="#">Piricing</a></li>
+          </ul>
+          <ul class="items-dest">
+            <h2 class="company-text">Destinations</h2>
+            <li><a class="links-items-footer" href="#">Maldives</a></li>
+            <li><a class="links-items-footer" href="#">Los Angelas</a></li>
+            <li><a class="links-items-footer" href="#">Las Vegas</a></li>
+            <li><a class="links-items-footer" href="#">Torronto</a></li>
+          </ul>
+          <div class="join-our-newsietter-footer">
+            <h1 class="join-our-text">Join Our Newsletter</h1>
+            <input class="your-email-adress" placeholder="Your email adress" />
+            <button class="subsicribe-btn">Subsicribe</button>
+            <p class="join-our-paragraph">
+              * Will send you weekly updates for your better<br />
+              tour packages.
+            </p>
           </div>
-          <div class="footer-copyright-text">
-            <h6 class="copyright-text">
-              Copyright @ Xpro 2022. All Rights Reserved.
-            </h6>
-          </div>
+        </div>
+        <hr class="copyright-line" />
+        <div class="footer-copyright-text">
+          <h6 class="copyright-text">
+            Copyright @ Xpro 2022. All Rights Reserved.
+          </h6>
         </div>
       </footer>
     </div>
