--- a/index.html
+++ b/index.html
@@ -49,24 +49,23 @@
         </div>
       </div>
     </div>
-    <div class="promotion-explore-container">
-      <div class="promotion-explore-left-screen">
-        <img class="explore-nature-img" src="images/homepage-explore1.png" />
-          <div class="explore-nature-description">
-            <h6 class="nature-promotion-text">PROMOTION</h6>
-            <h1 class="nature-explore-nature-text" >Explore Nature</h1>
-            <button class="nature-btn">Wiev Packages</button>
-            <img class="nature-line-effect" src="images/explore-section-line-img01.png"/>
-          </div>
-      </div>
-        <div class="promotion-explore-right-screen">
-          <img class="explore-cities-img" src="images/homepage-explore2.png" />
-            <div class="explore-nature-description">
-            <h6 class="nature-promotion-text">PROMOTION</h6>
-            <h1 class="nature-explore-nature-text" >Explore Nature</h1>
-            <button class="nature-btn">Wiev Packages</button>
-            <img class="cities-line-effect" src="images/explore-section-line-img02.png"/>
+    <div class="promotions-explore-container">
+      <div class="explore-left-screen"> 
+        <div class="explore-description">
+          <h5 class="promotion-text">Promotion</h5>
+          <h1 class="explore-big-text">Explore Nature</h1>
+          <button class="view-packages-btn">View Packages</button>
+          <img class="left-text-line-effect" src="images/explore-section-line-img01.png">
         </div>
-     </div>
+      </div>
+      <div class="explore-right-screen">
+        <div class="explore-description">
+          <h5 class="promotion-text">Promotion</h5>
+          <h1 class="explore-big-text">Explore Cities</h1>
+          <img class="right-text-line-effect"  src="images/explore-section-line-img02.png">
+          <button class="view-packages-btn">View Packages</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
