--- a/index.html
+++ b/index.html
@@ -101,6 +101,81 @@
         <img class="three-change-page" src="images/three-line.png">
       </div>
     </header>
+    <div class="Homepage-best">
+      <div class="best-services">
+        <div class="Homepage-best-container">
+          <h5 class="Homepage-best-services-1">CATEGORY</h5>
+          <h2 class="Homepage-best-services-2">We Offer Best Services</h2>
+        </div>
+        <div class="Homepage-best-services-img-text">
+          <div class="Homepage-best-services-human">
+            <div class="Homepage-best-human-img">
+              <img src="images/homepage-services-human.png" />
+              <span class="Hompage-box-1"></span>
+            </div>
+            <div class="Homepage-best-services-human-text">
+              <h4 class="Homepage-best-services-title-articles">
+                Guided Tours
+              </h4>
+              <p class="Homepage-best-services-paragraph-texts">
+                sunt qui repellat saepe<br />
+                quo velit aperiam id<br />
+                aliquam placead.
+              </p>
+            </div>
+          </div>
+          <div class="Homepage-best-services-plane">
+            <div class="orange-box"></div>
+            <div class="Homepage-best-services-plane-img">
+              <img class="plane" src="images/homepage-services-plane.png" />
+              <span class="Hompage-box-2"></span>
+            </div>
+            <div class="Homepage-best-services-plane-text">
+              <h4 class="Homepage-best-services-title-articles">
+                Best Flight Options
+              </h4>
+              <p class="Homepage-best-services-paragraph-texts">
+                sunt qui repellat saepe<br />
+                quo velit aperiam id<br />
+                aliquam placead.
+              </p>
+            </div>
+          </div>
+          <div class="Homepage-best-services-hands">
+            <div class="Homepage-best-services-hands-img">
+              <img src="images/homepage-services-hands.png" />
+              <span class="Hompage-box-3"></span>
+            </div>
+            <div class="Homepage-best-services-hands-text">
+              <h4 class="Homepage-best-services-title-articles">
+                Religiours Tours
+              </h4>
+              <p class="Homepage-best-services-paragraph-texts">
+                sunt qui repellat saepe<br />
+                quo velit aperiam id<br />
+                aliquam placead.
+              </p>
+            </div>
+          </div>
+          <div class="Homepage-best-services-medical">
+            <div class="Homepage-best-services-medical-img">
+              <img src="images/homepage-services-medical.png" />
+              <span class="Hompage-box-4"></span>
+            </div>
+            <div class="Homepage-best-services-medical-text">
+              <h4 class="Homepage-best-services-title-articles">
+                Medical İnsurance
+              </h4>
+              <p class="Homepage-best-services-paragraph-texts">
+                sunt qui repellat saepe<br />
+                quo velit aperiam id<br />
+                aliquam placead.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="honeymoon-project-container">
       <div class="honeymoon-wrapper">
         <div class="honeymoon-image">
