--- a/index.html
+++ b/index.html
@@ -129,5 +129,31 @@
         </div>
       </div>
     </div>
+    <div class="testimonials-page-container">
+      <img class="container-picture" src="images/testimonial-section-hat-img.png"/>
+      <div class="title-and-user-desc">
+        <div class="promotion-text-desc">
+          <h5 class="promotion-text">PROMOTION</h5>
+          <h1 class="about-us-text">See What Our Clients Say About Us</h1>
+        </div>
+      </div>
+      <div class="user-review-desc">
+        <img class="user-photo"src="images/testimonial-section-box-pp-img.png"/>
+        <img class="description-icon" src="images/testimonial-box-quotes.png" />
+        <p class="user-desc-text">
+          Vel officiis dolor ea illo aut eligendi ullam non laudantium magnam et
+          recusandae molestiae sit iure unde aut voluptate quaerat. Id sunt
+          provident quo possimus<br />
+          impedit vel doloremque obcaecati qui ullam consectetur<br />
+          et ipsum omnis.
+        </p>
+        <h6 class="designer-user-name">Christine Beckam - Designer</h6>
+        <img class="left-page-change" src="images/arrow-right-icon.png" />
+        <img class="right-page-change" src="images/arrow-leeft-icon.png" />
+      </div>
+      <div class="change-page-lines">
+        <img src="images/Pagination.jpg" />
+      </div>
+    </div>
   </body>
 </html>
