promotion-text-yazısı-düzeltildi

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <img class="container-picture" src="images/testimonial-section-hat-img.png"/>
       <div class="title-and-user-desc">
         <div class="promotion-text-desc">
-          <h5 class="promotion-text">PROMOTION</h5>
+          <h5 class="promotion-first-text">PROMOTION</h5>
           <h1 class="about-us-text">See What Our Clients Say About Us</h1>
         </div>
       </div>
