gerekli-güncellemeler-yapıldı

--- a/index.html
+++ b/index.html
@@ -48,32 +48,36 @@
           </h1>
           <div class="blur-screen-links-item">
             <ul class="blur-links-item">
-              <li><a href="#">Where to?</a></li>
-              <img src="images/line.png" />
-              <li class="travel-link-list"><a href="#">Travel Type<i id="services-down" class="fa-solid fa-chevron-down"></i></a>
-                <div class="services-links-items-travel">
-                  <ul>
-                    <li><a class="services-item-travel" href="#">Sightseeing Tours</a></li>
-                    <li><a class="services-item-travel" href="#">Nature Tours</a></li>
-                    <li><a class="services-item-travel" href="#">Honeymoon Tours</a></li>
-                    <li><a class="services-item-travel" href="#">Holiday Village Tours</a></li>
-                    <li><a class="services-item-travel" href="#">Others</a></li>
-                  </ul>
-                </div>
+              <li>
+                <input class="list-input" list="whereTo" placeholder="Where To?">
+                <datalist class="whereTo" id="whereTo">
+                  <option class="travel-type-item" value="İbiza (Spain)"></option>
+                  <option class="travel-type-item" value="Fethiye (Turkey)"></option>
+                  <option class="travel-type-item" value="Cape Town (South Africa)"></option>
+                  <option class="travel-type-item" value="Jamaika Tulum (Mexico)"></option>
+                  <option class="travel-type-item" value="Algarve (Portugal)"></option>
+                  <option class="travel-type-item" value="Goa (India)"></option>
+                </datalist>
               </li>
               <img src="images/line.png" />
-              <li></li>
+              <li>
+                <input class="list-input" list="TravelType" placeholder="Travel Type">
+                <datalist class="list" id="TravelType">
+                  <option class="travel-type-item" value="Nature Tours"></option>
+                  <option class="travel-type-item" value="Honeymoon Tours" selected>Honeymoon Tours</option>
+                  <option class="travel-type-item" value="Holiday Village Tours"></option>
+                  <option class="travel-type-item" value="Others"></option>
+                </datalist>
+              </li>
+              <img src="images/line.png"/>
               <li class="duration-link-list">
-                <a href="#">Duration<i id="services-down"class="fa-solid fa-chevron-down"></i></a>
-                <div class="services-links-items-duration">
-                  <ul>
-                    <li><a class="services-item-duration" href="#">1 Month</a></li>
-                    <li><a class="services-item-duration" href="#">3 Month</a></li>
-                    <li><a class="services-item-duration" href="#">6 Month</a></li>
-                    <li><a class="services-item-duration" href="#">1 Year</a></li>
-                    <li><a class="services-item-duration" href="#">Others</a></li>
-                  </ul>
-                </div>
+                <input class="list-input" list="DurationType" placeholder="Duration">
+                <datalist class="list" id="DurationType">
+                  <option class="travel-type-item" value="1 Month"></option>
+                  <option class="travel-type-item" value="1 Week" selected>1 Week</option>
+                  <option class="travel-type-item" value="1 Year"></option>
+                  <option class="travel-type-item" value="Others"></option>
+                </datalist>
               </li>
             </ul>
             <button class="blur-btn">Submit</button>
@@ -94,12 +98,10 @@
           </div>
         </div>
       </div>
-      <div class="scroll-image">
-        <img class="scroll-png" src="images/scroll.png" />
-      </div>
       <div class="change-page-buttons">
         <img class="three-change-page" src="images/three-line.png">
       </div>
+      <img class="scroll-png" src="images/scroll.png" />
     </header>
     <div class="Homepage-best">
       <div class="best-services">
