--- a/index.html
+++ b/index.html
@@ -14,6 +14,69 @@
     />
   </head>
   <body>
+    <div class="about-explore-packages-container">
+      <div class="first-text">
+        <h5 class="explore-more-text">EXPLORE MORE</h5>
+        <h1 class="international-text">Our International Packages</h1>
+      </div>
+      <div class="container-items">
+        <div id="column-item" class="item1">
+          <img src="images/about/about-city-img-barcelona.png">
+          <h6 class="image-text">Barcelona</h6>
+          <h6 class="money-text">$840</h6>
+        </div>
+        <div id="column-item" class="item2">
+           <img src="images/about/about-city-img-switzerland.png">
+           <h6 class="image-text">Switzerland</h6>
+          <h6 class="money-text">$840</h6>
+        </div>
+        <div id="column-item" class="item3">
+           <img src="images/about/about-city-img-riodejenero.png">
+           <h6 class="image-text">Rio de Jenero</h6>
+          <h6 class="money-text">$840</h6>
+        </div>  
+        <div id="column-item" class="item4">
+          <img src="images/about/about-city-img-barcelona02.png">
+          <h6 class="image-text">Barcelona</h6>
+          <h6 class="money-text">$840</h6>
+        </div>
+        <div id="column-item" class="item5">
+          <img src="images/about/about-city-img-tommorowland.png">
+          <h6 class="image-text">Tomorrow Land</h6>
+          <h6 class="money-text">$840</h6>
+        </div>
+        <div id="column-item" class="item6">
+          <img src="images/about/about-city-img-losangelas.png">
+          <h6 class="image-text">Los Angelas</h6>
+          <h6 class="money-text">$840</h6>
+        </div>
+        <div id="column-item" class="item7">
+          <img src="images/about/about-city-img-barcelona03.png">
+          <h6 class="image-text">Barcelona</h6>
+          <h6 class="money-text">$840</h6>
+        </div>
+        <div id="column-item" class="item8">
+          <img src="images/about/about-city-img-barcelona04.png">
+          <h6 class="image-text">Barcelona</h6>
+          <h6 class="money-text">$840</h6>
+        </div>  
+        <div id="column-item" class="item9">
+          <img src="images/about/about-city-img-maldives.png">
+          <h6 class="image-text">Maldives</h6>
+          <h6 class="money-text">$840</h6>
+        </div>
+        <div id="column-item" class="item10">
+          <img class="free-image" src="images/about/island.jpg">
+          <h6 class="image-text">Island</h6>
+          <h6 class="money-text">$840</h6>
+        </div>
+        <div id="column-item" class="item11">
+          <img class="free-image" src="images/about/pakistan.jpg">
+          <h6 class="image-text">Pakistan</h6>
+          <h6 class="money-text">$840</h6>
+        </div>
+      </div>
+    </div>
     <div class="Homepage-best">
       <div class="best-services">
         <div class="Homepage-best-container">
