--- a/about.html
+++ b/about.html
@@ -6,8 +6,34 @@
     <title>Tour and Travel About</title>
     <link rel="stylesheet" href="styles/about.css">
     <link rel="stylesheet" href="styles/shared.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-    
+    <header class="about-us-page-container">
+      <nav class="about-navigation-menu">
+        <img src="images/logo_2.png">
+        <ul class="about-navigation-items">
+          <li><a class="about-page-nav-item" href="#">Home</a></li>
+          <li><a id="about-link-active" class="about-page-nav-item" href="#">About</a></li>
+            <li class="services-link-list"><a class="homepage-item" href="#">Services<i id="services-down" class="fa-solid fa-chevron-down"></i></a>
+              <div class="services-links-items">
+                <ul>
+                  <li><a class="services-item" href="#">Honeymoon Packages</a></li>
+                  <li><a class="services-item" href="#">Tours Packages</a></li>
+                  <li><a class="services-item" href="#">Musical Events</a></li>
+                  <li><a class="services-item" href="#">Build Package</a></li>
+                  <li><a class="services-item" href="#">Others</a></li>
+                </ul>
+              </div>
+            </li>
+          <li><a class="about-page-nav-item" href="#">Upcomming Packages</a></li>
+        </ul>
+        <button class="touch-Btn">Get in Touch</button>
+      </nav>
+      <div class="about-us-text-screen">
+        <h5 class="read-text">READ</h5>
+        <h1 class="about-us-text">About Us</h1>
+      </div>
+    </header>
   </body>
 </html>
