input-sorunu-giderildi-logo-düzenlendi

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="homepage-hero-section-container">
       <nav class="navigation-links-items-container">
         <div class="navigation-items">
-          <img src="images/logo.png" />
+          <img src="images/logo_2.png"/>
           <ul class="homepage-link-items">
             <li><a class="homepage-item" href="#">Home</a></li>
             <li><a class="homepage-item" href="#">About</a></li>
@@ -49,35 +49,15 @@
           <div class="blur-screen-links-item">
             <ul class="blur-links-item">
               <li>
-                <input class="list-input" list="whereTo" placeholder="Where To?">
-                <datalist class="whereTo" id="whereTo">
-                  <option class="travel-type-item" value="İbiza (Spain)"></option>
-                  <option class="travel-type-item" value="Fethiye (Turkey)"></option>
-                  <option class="travel-type-item" value="Cape Town (South Africa)"></option>
-                  <option class="travel-type-item" value="Jamaika Tulum (Mexico)"></option>
-                  <option class="travel-type-item" value="Algarve (Portugal)"></option>
-                  <option class="travel-type-item" value="Goa (India)"></option>
-                </datalist>
+                <input class="list-input" placeholder="Where To?">
               </li>
               <img src="images/line.png" />
               <li>
-                <input class="list-input" list="TravelType" placeholder="Travel Type">
-                <datalist class="list" id="TravelType">
-                  <option class="travel-type-item" value="Nature Tours"></option>
-                  <option class="travel-type-item" value="Honeymoon Tours" selected>Honeymoon Tours</option>
-                  <option class="travel-type-item" value="Holiday Village Tours"></option>
-                  <option class="travel-type-item" value="Others"></option>
-                </datalist>
+                <input class="list-input" placeholder="Travel Type">
               </li>
               <img src="images/line.png"/>
               <li class="duration-link-list">
-                <input class="list-input" list="DurationType" placeholder="Duration">
-                <datalist class="list" id="DurationType">
-                  <option class="travel-type-item" value="1 Month"></option>
-                  <option class="travel-type-item" value="1 Week" selected>1 Week</option>
-                  <option class="travel-type-item" value="1 Year"></option>
-                  <option class="travel-type-item" value="Others"></option>
-                </datalist>
+                <input class="list-input" placeholder="Duration">
               </li>
             </ul>
             <button class="blur-btn">Submit</button>
