[PR-17]-TEMPLATED-PROJECT

--- a/about.html
+++ b/about.html
@@ -6,8 +6,22 @@
     <title>Tour and Travel About</title>
     <link rel="stylesheet" href="styles/about.css">
     <link rel="stylesheet" href="styles/shared.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&family=Volkhov&family=Yesteryear&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="media-video">
+      <div class="wonderlust-video">
+        <video class="video" loop autoplay>
+          <source src="images/about/about-video01.mp4"type="video/mp4"/>
+        </video>
+        <div class="media-text"><h1>Wanderlust</h1></div>
+      </div>
+    </div>
     
+    <video >
+     
+    </video>
   </body>
 </html>
