[PR-17]-FİNİSHED-PROJECT

--- a/about.html
+++ b/about.html
@@ -11,17 +11,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Volkhov&family=Yesteryear&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="media-video">
       <div class="wonderlust-video">
-        <video class="video" loop autoplay>
+        <video class="video" autoplay="autoplay" loop="loop" >
           <source src="images/about/about-video01.mp4"type="video/mp4"/>
         </video>
         <div class="media-text"><h1>Wanderlust</h1></div>
       </div>
-    </div>
-    
-    <video >
-     
-    </video>
   </body>
 </html>
