--- a/about.html
+++ b/about.html
@@ -17,6 +17,35 @@
       </video>
       <div class="media-text"><h1>Wanderlust</h1></div>
     </div>
+    <div class="about-promotion">
+      <div class="about-promotion-text">
+        <div class="promotion"><h5>PROMOTİON</h5></div>
+        <div class="promotion-title">We Provide You Best <br>Europe Sightseeing Tours</div>
+        <div class="promotion-paragraph"><p>Et labore harum non nobis ipsum eum molestias mollitia et corporis <br> praesentium a laudantium internos. Non quis eius quo eligendi corrupti <br> et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus <br> illum aut optio quibusdam!</p></div>
+      <button type="button" class="button"><h6>View Packages</h6></button>
+      </div >
+      <div class="about-img">
+       <img src="images/about/about-context-img01.png" >
+      </div>
+    </div>
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
     <div class="about-trend-section-container">
       <img class="shell-image" src="images/about/about-trend-shell-img.png">
