--- a/about.html
+++ b/about.html
@@ -24,10 +24,9 @@
         <div class="promotion-paragraph"><p>Et labore harum non nobis ipsum eum molestias mollitia et corporis <br> praesentium a laudantium internos. Non quis eius quo eligendi corrupti <br> et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus <br> illum aut optio quibusdam!</p></div>
       <button type="button" class="button"><h6>View Packages</h6></button>
       </div >
-      <div class="about-img">
-       <img src="images/about/about-context-img01.png" >
+      <div class="about-img"><img src="images/about/about-context-img01.png" ></div>
       </div>
-    </div>
+    
     
 
 
