--- a/about.html
+++ b/about.html
@@ -11,13 +11,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Volkhov&family=Yesteryear&display=swap" rel="stylesheet">
   </head>
   <body>
+  
+
     <div class="about-promotion">
       <div class="about-promotion-text-img">
         <div class="about-promotion-text">
-          <div class="promotion"><h5>PROMOTİON</h5></div>
-          <div class="promotion-title">We Provide You Best <br>Europe Sightseeing Tours</div>
+          <div class="promotion-small-title"><h5>PROMOTİON</h5></div>
+          <div class="promotion-big-title">We Provide You Best <br>Europe Sightseeing Tours</div>
           <div class="promotion-paragraph"><p>Et labore harum non nobis ipsum eum molestias mollitia et corporis <br> praesentium a laudantium internos. Non quis eius quo eligendi corrupti <br> et fugiat nulla qui soluta recusandae in maxime quasi aut ducimus <br> illum aut optio quibusdam!</p></div>
-        <button type="button" class="button"><h6>View Packages</h6></button>
+        <button type="button" class="about-promotion-button"><h6>View Packages</h6></button>
         </div >
         <div class="about-img"><img src="images/about/about-context-img01.png" ></div>
         </div>
